DOM elements added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button onclick="resetBoard()" type="button" class="btn btn-primary btn-lg" name="button">Restart</button>
       </div>
 
+      <center><h3 id="turn">X's turn</h3></center>
       <table align="center">
         <tr>
           <!-- Each table-data (td) has an id that matches it's position in the array or arrays [0][1] -->
